login page alignment fixed

--- a/src/scss/components/_login.scss
+++ b/src/scss/components/_login.scss
@@ -14,6 +14,10 @@
       margin: 0;
     }
   }
+  &__card-register{
+    padding: 10px;
+    margin-top: 25px;
+  }
   &--inline{
     display:inline;
   }
@@ -27,4 +31,7 @@
   &--disappear{
     opacity: 0;
   }
+}
+.indexPage{
+  overflow:hidden;
 }
